test/integration/rstanarm/tparameters/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tparameters_betareg.stan

Syntax error in 'tparameters_betareg.stan', line 1, column 2 to column 4, parsing error:
   -------------------------------------------------
     1:    if (prior_dist_z == 0) omega = z_omega;
           ^
     2:    else if (prior_dist_z == 1) omega = z_omega .* prior_scale_z + prior_mean_z;
     3:    else if (prior_dist_z == 2) for (k in 1:z_dim) {
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tparameters_glm.stan

Syntax error in 'tparameters_glm.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[K] beta;
           ^
     2:    vector[K_smooth] beta_smooth;
     3:    vector[K_smooth > 0 ? smooth_map[K_smooth] : 0] smooth_sd;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tparameters_mvmer.stan

Syntax error in 'tparameters_mvmer.stan', line 1, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    vector[yK[1]] yBeta1; // population level params
           ^
     2:    vector[yK[2]] yBeta2;
     3:    vector[yK[3]] yBeta3;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


